Hide inputs add aluno

--- a/src/components/alunos/formAddAluno.html
+++ b/src/components/alunos/formAddAluno.html
@@ -85,8 +85,10 @@
          <div class='div_input_readonly'>
           <label>Responsável:</label> 
          <input type='text' id='resp_nome' readonly='true'/>
+      <!--    <label>Genêro:</label>  -->
+         <input type='hidden' id='resp_genero' readonly='true'/>
         </div>
-         <div class='div_input_readonly'>
+        <div class='div_input_readonly'>
           <label>RG:</label> 
          <input type='text' id='resp_rg' readonly='true'/>
         </div>
@@ -95,16 +97,35 @@
          <input type='text' id='resp_cpf' readonly='true'/>
         </div>
          <div class='div_input_readonly'>
-          <label>Cel:</label> 
-         <input type='text' id='resp_cel' readonly='true'/>
+        <!--   <label>End.:</label>  -->
+         <input type='hidden' id='resp_end' readonly='true'/>
+         <!--  <label>Número.:</label>  -->
+         <input type='hidden' id='resp_end_numero' readonly='true'/>
         </div>
          <div class='div_input_readonly'>
-          <label>Tel:</label> 
-         <input type='text' id='resp_tel' readonly='true'/>
+        <!--   <label>Bairro:</label>  -->
+         <input type='hidden' id='resp_bairro' readonly='true'/>
         </div>
          <div class='div_input_readonly'>
-          <label>Email:</label> 
-         <input type='text' id='resp_email' readonly='true'/>
+         <!--  <label>CEP:</label> --> 
+         <input type='hidden' id='resp_cep' readonly='true'/>
+        </div>
+      
+         <div class='div_input_readonly'>
+       <!--    <label for='resp_cel'>Cel:</label>  -->
+         <input type='hidden' id='resp_cel' readonly='true'/>
+        </div>
+         <div class='div_input_readonly'>
+       <!--    <label for='resp_tel'>Tel:</label>  -->
+         <input type='hidden' id='resp_tel' readonly='true'/>
+        </div>
+         <div  for='resp_email' class='div_input_readonly'>
+         <!--  <label>Email:</label>  -->
+         <input type='hidden' id='resp_email' readonly='true'/>
+        </div>
+         <div class='div_input_readonly'>
+         <!--  <label>Data Nasc.:</label>  -->
+         <input type='hidden' id='resp_data_nasc' readonly='true'/>
         </div>
       </fieldset>
 
