--- a/src/assets/css/sass/fluxo_caixa/_formAddEntradaCaixa.scss
+++ b/src/assets/css/sass/fluxo_caixa/_formAddEntradaCaixa.scss
@@ -1,34 +1,81 @@
 @use "../abstracts/" as *;
 #form_add_entrada_caixa{
-@extend .form_flex;
-max-width: 80%;
-div{
-    margin-bottom:10px;
+    h3{width:100%; margin-top:20px; margin-bottom:20px;}
+
+fieldset{
+    background: rgb(115, 141, 115);
+    border:1px solid #333;
+display: flex;
+flex-wrap: wrap;
+max-width: 100%;
+padding:0px;
+.div_inputs{
+    margin:0px;
+    background:#ccc;
+    min-width: 100px;
+    flex-shrink: 1;
+    flex-grow: 1;
     padding:0px;
-    display:block;
-    box-shadow: 0px 1px 1px 1px #666;
+    box-shadow: 0px 0px 1px #111;
 label{width:100%; 
-    justify-content:center;  background: #444; color:#C4D79B}
-input, select{width:100%; height:40px;
-border:0px;}
-
-}
-
-.div_forma_pag{
-    max-width: 150px;
-}
-.div_parcela{
-    max-width: 150px;
-}
-.div_valor{
-    max-width: 150px;
-}
-.div_data{max-width:150px;}
-.div_aluno{}
-
-.div_submit{
-    border:0px;
-    box-shadow: 0px 0px 0px 0px #666;
+    border-radius: 0px;
+    padding:5px;
+    display: flex;
+    justify-content:center; 
+     //background: #666;
+     background: #d3ddd3;
+     border-bottom:1px solid #aaa;
+     // color:#f0f0f0
     }
-  
+input, select, textarea{width:100%;  height:50px;
+    padding:12px 10px;
+    border-radius: 0px;
+    border:0px solid #aaa;
+    resize: vertical;
+    &:focus{
+        outline: 1px solid $primary-color;
+        outline-offset: -1px;
+    }
+}
+textarea{
+    min-height:50px ;
+    margin-bottom:-3px !important;
+}
+
+input[readonly='true']{
+    background: #ddd;
+    user-select: none;
+}
+}
+.div_n_lanc{max-width: 100px;}
+.div_aluno, .div_curso, .div_resp{
+    min-width: 80px !important;
+}
+ .div_valor, .div_valor_total, .div_desconto{
+    width: 100px;
+ input{
+    font-size: 18px;
+    font-weight: bold;
+
+ }
+}
+
+.div_vencimento{max-width:170px; }
+.div_data{max-width:200px;}
+
+
+    }
+    .div_submit{
+        width:100%; 
+        background:#ddd;
+        padding:20px;
+        border:0px;
+        box-shadow: 0px 0px 0px 0px #666;
+        input[type='submit']{
+            @extend .btn-default;
+            min-width: 30%;
+            min-width: 300px;
+        }
+        }
+ 
 }
