--- a/src/components/fluxoCaixa/index.html
+++ b/src/components/fluxoCaixa/index.html
@@ -1,16 +1,22 @@
   
 <div class="components" id="page_fluxo_caixa">
     <h1>Fluxo de Caixa</h1>
-    <nav class='nav_forms nav_forms_entrada_caixa'>
-
-        <ul>
-          <li><a id='btn_form_entrada_caixa'>
-            + <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cash" viewBox="0 0 16 16">
-                <path d="M8 10a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"/>
-                <path d="M0 4a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V4zm3 0a2 2 0 0 1-2 2v4a2 2 0 0 1 2 2h10a2 2 0 0 1 2-2V6a2 2 0 0 1-2-2H3z"/>
-              </svg> Entrada de Caixa</a></li>
-        </ul>
-        </nav>
+        <div id='bg_submenu_page'>
+          <menu id='submenu_fluxo_caixa' class='submenu_page'>
+            <ul>
+                <li><a id='btn_users_info_table' href='#'>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-table" viewBox="0 0 16 16">
+                        <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm15 2h-4v3h4V4zm0 4h-4v3h4V8zm0 4h-4v3h3a1 1 0 0 0 1-1v-2zm-5 3v-3H6v3h4zm-5 0v-3H1v2a1 1 0 0 0 1 1h3zm-4-4h4V8H1v3zm0-4h4V4H1v3zm5-3v3h4V4H6zm4 4H6v3h4V8z"/>
+                      </svg> Ver Entradas</a></li>
+        
+                  <li><a id='btn_form_entrada_caixa'>
+                    + <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cash" viewBox="0 0 16 16">
+                        <path d="M8 10a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"/>
+                        <path d="M0 4a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V4zm3 0a2 2 0 0 1-2 2v4a2 2 0 0 1 2 2h10a2 2 0 0 1 2-2V6a2 2 0 0 1-2-2H3z"/>
+                      </svg> Adicionar Entrada</a></li>
+            </ul>
+            </menu>
+        </div>
    <div id='fluxo_caixa_content'>
 
    </div>
