--- a/src/components/fluxoCaixa/formAddPagMensalidade.html
+++ b/src/components/fluxoCaixa/formAddPagMensalidade.html
@@ -1,4 +1,4 @@
-<form id='form_add_entrada_caixa' >
+<form id='form_add_pag_mensalidade' >
     <h3>
         + <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cash" viewBox="0 0 16 16">
             <path d="M8 10a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"/>
@@ -12,7 +12,7 @@
 <!------------->
 <div  class='div_inputs div_n_lanc'>
     <label>Nº Lanc.: </label>
-    <input readonly='true' type='text' id='valor_total'
+    <input readonly='true' type='text' id='n_lanc'
     value='C0062F01'/>
 </div>
 
