--- a/src/assets/css/sass/style.scss
+++ b/src/assets/css/sass/style.scss
@@ -216,6 +216,34 @@ grid-template-columns: 250px 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     cursor: pointer;
   }
 }
+.show_fixed_message{
+  display: flex;
+  text-align: center;
+  align-content: center;
+  justify-content: center;
+  color:rgb(61, 94, 59);
+
+  //------------------
+  background: #fff;
+  margin-left: auto;
+  margin-right: auto;
+    left: 0;
+    right: 0;
+  top:10%;
+  z-index: 5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width:100%; height:auto;
+  height: 80px;
+  padding:40px;
+  font-size:18px;
+  border-radius: 5px;
+  box-shadow: 0px 2px 2px #33333370;
+  border:1px solid #ccc;
+
+}
 .show_message{
   display: flex;
   text-align: center;
@@ -264,10 +292,7 @@ grid-template-columns: 250px 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   color:rgb(43, 75, 163);
   border-color: rgb(51, 70, 155);
   background: rgb(235, 241, 245);
-
 }
-
-
 
 footer{
   grid-area: footer;
