Fluxo caixa ajustes

--- a/src/assets/css/sass/fluxo_caixa/_formAddPagMensalidade.scss
+++ b/src/assets/css/sass/fluxo_caixa/_formAddPagMensalidade.scss
@@ -68,6 +68,8 @@ input[readonly='true']{
     .div_submit{
         width:100%; 
         background:#ddd;
+        border:1px solid #333;
+        border-top:0px;
         padding: 40px 20px;
         border:0px;
         box-shadow: 0px 0px 0px 0px #666;
