--- a/src/components/fluxoCaixa/formAddPagMensalidade.html
+++ b/src/components/fluxoCaixa/formAddPagMensalidade.html
@@ -19,17 +19,15 @@
   
     <div  class='div_inputs div_aluno'>
         <label>Aluno</label>
-        <select id='aluno_select'>
-            <option value='RA0001'>RA0001 - Fulano de Tal</option>
-            <option value='RA0002'>RA0002 - Ciclano da Silva</option>
-            <option value='RA0003'>RA0003 - Beltranilson de Seila Onde</option>
+        <select id='main_select_aluno'>
+           
         </select>
     </div>
  
  
     <div  class='div_inputs div_curso'>
         <label>Curso</label>
-        <select id='curso'>
+        <select id='select_curso'>
             <option>Excel Avançado</option>
             <option>Informática Completo</option>
         </select>
