--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2254,6 +2254,8 @@ option[disabled] {
 #form_add_pag_mensalidade .div_submit {
   width: 100%;
   background: #ddd;
+  border: 1px solid #333;
+  border-top: 0px;
   padding: 40px 20px;
   border: 0px;
   box-shadow: 0px 0px 0px 0px #666;
