--- a/src/components/fluxoCaixa/formAddPagMensalidade.html
+++ b/src/components/fluxoCaixa/formAddPagMensalidade.html
@@ -27,14 +27,14 @@
  
     <div  class='div_inputs div_curso'>
         <label>Curso</label>
-        <select id='select_curso'>
-            <option>Excel Avançado</option>
-            <option>Informática Completo</option>
+        <select id='select_curso' >
+            <option disabled selected>Selecione o curso</option>
+            
         </select>
     </div>
     <div class='div_inputs div_parcela'>
         <label>Parcela</label>
-        <select id='parcela'>
+        <select id='select_parcelas'>
             <option>Parcela 1</option>
             <option>Parcela 2</option>
             <option>Parcela 3</option>
