Fluxo de Caixa - WIP

--- a/src/components/alunos/formAddAluno.html
+++ b/src/components/alunos/formAddAluno.html
@@ -30,6 +30,7 @@
        <input type='text' id='curso_nome'  readonly='true'/>
       </div>
       <!--Hidden fields Curso-->
+       <input id='curso_id_contrato' type='text' />
        <input id='curso_duracao' type='number' />
        <input id='curso_parcelas' type='number' />
        <input id='curso_vencimento' type='number' /> 
