--- a/src/components/fluxoCaixa/formAddPagMensalidade.html
+++ b/src/components/fluxoCaixa/formAddPagMensalidade.html
@@ -13,7 +13,7 @@
 <div  class='div_inputs div_n_lanc'>
     <label>Nº Lanc.: </label>
     <input readonly='true' type='text' id='n_lanc'
-    value='C0062F01'/>
+    value=''/>
 </div>
 
   
