Fluxo de Caixa - WIP

--- a/src/components/fluxoCaixa/formAddPagMensalidade.html
+++ b/src/components/fluxoCaixa/formAddPagMensalidade.html
@@ -35,22 +35,7 @@
     <div class='div_inputs div_parcela'>
         <label>Parcela</label>
         <select id='select_parcelas'>
-            <option>Parcela 1</option>
-            <option>Parcela 2</option>
-            <option>Parcela 3</option>
-            <option>Parcela 4</option>
-            <option>Parcela 5</option>
-            <option>Parcela 6</option>
-            <option>Parcela 7</option>
-            <option>Parcela 8</option>
-            <option>Parcela 9</option>
-            <option>Parcela 10</option>
-            <option>Parcela 11</option>
-            <option>Parcela 12</option>
-            <option>Parcela 13</option>
-            <option>Parcela 14</option>
-            <option>Parcela 15</option>
-            <option>Parcela 16</option>
+            <option></option>
         </select>
     </div>
     <div class='div_inputs div_resp'>
