Fluxo de Caixa - WIP

--- a/src/components/fluxoCaixa/formAddPagMensalidade.html
+++ b/src/components/fluxoCaixa/formAddPagMensalidade.html
@@ -28,7 +28,7 @@
     <div  class='div_inputs div_curso'>
         <label>Curso</label>
         <select id='select_curso' >
-            <option disabled selected>Selecione o curso</option>
+            <option></option>
             
         </select>
     </div>
