Fluxo de Caixa - WIP

--- a/src/components/fluxoCaixa/formAddPagMensalidade.html
+++ b/src/components/fluxoCaixa/formAddPagMensalidade.html
@@ -10,26 +10,17 @@
    <input  type='hidden' id='ra'/>
    <input  type='hidden' id='aluno'/>
 <!------------->
-<div  class='div_inputs div_n_lanc'>
-    <label>Nº Lanc.: </label>
-    <input readonly='true' type='text' id='n_lanc'
-    value=''/>
-</div>
+<div class='row'>
 
-  
     <div  class='div_inputs div_aluno'>
         <label>Aluno</label>
-        <select id='main_select_aluno'>
-           
+        <select id='main_select_aluno'> 
         </select>
     </div>
- 
- 
     <div  class='div_inputs div_curso'>
         <label>Curso</label>
-        <select id='select_curso' >
+        <select id='select_curso'>
             <option></option>
-            
         </select>
     </div>
     <div class='div_inputs div_parcela'>
@@ -37,6 +28,14 @@
         <select id='select_parcelas'>
             <option></option>
         </select>
+    </div>
+
+  </div><!--row-->
+<div class='row'>
+    <div  class='div_inputs div_n_lanc'>
+        <label>Nº Lanc.: </label>
+        <input readonly='true' type='text' id='n_lanc'
+        value=''/>
     </div>
     <div class='div_inputs div_resp'>
         <label>Resp.: </label>
@@ -46,37 +45,49 @@
         <label>Vencimento: </label>
         <input  readonly='true' type='Date' id='vencimento'/>
     </div>
+    <div class='div_inputs  div_data'>
+    <label>Data: </label>
+    <input  type='Date' id='data'/>
+    </div>
+</div><!--row-->    
+<div class='row'>
+
     <div  class='div_inputs div_valor'>
         <label>Valor: </label>
-        <input  readonly='true' type='text' id='valor'/>
+        <input  readonly='true' type='text' id='valor'  value='0,00'/>
     </div>
     <div  class='div_inputs div_desconto'>
         <label>Desc.: </label>
-        <input  type='text' id='desconto'/>
+        <input  type='text' id='desconto'  value='0,00'/>
     </div>
     <div  class='div_inputs div_valor_total'>
         <label>Valor Total: </label>
-        <input  type='text' id='valor_total'/>
+        <input  type='text' id='valor_total' readonly='true' value='0,00'/>
     </div>
     <div  class='div_inputs div_forma_pag'>
         <label>Forma de Pag.</label>
         <select id='forma_pag'>
-            <option>Dinheiro</option>
-            <option>Débito</option>
-            <option>Crédito</option>
-            <option>PIX</option>
+            <option disabled selected></option>
+            <option value='dinheiro'>Dinheiro</option>
+            <option value='débito'>Débito</option>
+            <option value='crédito'>Crédito</option>
+            <option value='pix'>PIX</option>
         </select>
     </div>
-        <div class='div_inputs  div_data'>
-        <label>Data: </label>
-        <input  type='Date' id='data'/>
-    </div>
+</div><!--row-->
+<div class='row'>
     <div  class='div_inputs div_obs'>
-        <label>Obs.: </label>
+        <label>Observações: </label>
         <textarea id='obs'></textarea>
     </div>
+
+</div><!--row-->
+<div class='row'>
+<div class='div_inputs div_submit'>
+    <input type='submit' value="Salvar Pagamento"/>
+</div>
+</div><!--row-->
+
 </fieldset>
-    <div class='div_inputs div_submit'>
-        <input type='submit' value="Salvar Pagamento"/>
-    </div>
+ 
 </form>
