--- a/src/components/contratos/formAddContrato.html
+++ b/src/components/contratos/formAddContrato.html
@@ -6,7 +6,6 @@
       <h3>Adicionar Contrato</h3>
 
       <div id='bg_div_id_contrato' class='fieldset'>
-  
          <div id='div_id_contrato'>
            <label>ID Contrato:</label>
             <input id='id_contrato' maxlength="5" required type='text' list="list_id_contrato"/>
@@ -151,8 +150,8 @@
               value='0,00' /> </div>
           <div  id='div_curso_desconto'> <label for='curso_desconto'> Desc. R$: </label> <input
               id="curso_desconto" type="text" value='0,00' /> </div>
-          <div  id='div_curso_total'> <label>Total R$: </label> <input id="curso_total" type="text"
-              value='0,00' /> </div>
+          <div  id='div_curso_valor_total'> <label>Total R$: </label> 
+            <input id="curso_valor_total" type="text" value='0,00' /> </div>
         </div>
         <!--row-->
         <div class='row'>
