--- a/src/components/fluxoCaixa/formAddPagMensalidade.html
+++ b/src/components/fluxoCaixa/formAddPagMensalidade.html
@@ -52,17 +52,17 @@
 </div><!--row-->    
 <div class='row'>
 
-    <div  class='div_inputs div_valor'>
+    <div  class='div_inputs div_curso_valor'>
         <label>Valor: </label>
-        <input  readonly='true' type='text' id='valor'  value='0,00'/>
+        <input  readonly='true' type='text' id='curso_valor'  value='0,00'/>
     </div>
-    <div  class='div_inputs div_desconto'>
+    <div  class='div_inputs div_curso_desconto'>
         <label>Desc.: </label>
-        <input  type='text' id='desconto'  value='0,00'/>
+        <input  type='text' id='curso_desconto'  value='0,00'/>
     </div>
-    <div  class='div_inputs div_valor_total'>
+    <div  class='div_inputs div_curso_valor_total'>
         <label>Valor Total: </label>
-        <input  type='text' id='valor_total' readonly='true' value='0,00'/>
+        <input  type='text' id='curso_valor_total' readonly='true' value='0,00'/>
     </div>
     <div  class='div_inputs div_forma_pag'>
         <label>Forma de Pag.</label>
