Fluxo de caixa pag_mensalidade finalizado

--- a/src/components/fluxoCaixa/formAddPagMensalidade.html
+++ b/src/components/fluxoCaixa/formAddPagMensalidade.html
@@ -34,8 +34,7 @@
 <div class='row'>
     <div  class='div_inputs div_n_lanc'>
         <label>Nº Lanc.: </label>
-        <input readonly='true' type='text' id='n_lanc'
-        value=''/>
+        <input readonly='true' type='text' id='n_lanc' value=''/>
     </div>
     <div class='div_inputs div_resp'>
         <label>Resp.: </label>
