--- a/src/assets/css/sass/style.scss
+++ b/src/assets/css/sass/style.scss
@@ -55,6 +55,12 @@
   }
 }
 
+*:focus{
+  outline: 2px solid lighten($primary-color, 20%);
+  outline-offset: -2px;
+
+}
+
 .load_element{
  width:100px;
  height:100px;
