Fluxo de caixa table info - WIP

--- a/src/components/fluxoCaixa/infoTablePagMensal.html
+++ b/src/components/fluxoCaixa/infoTablePagMensal.html
@@ -34,7 +34,7 @@
     <th>Form. Pag</th>
     <th>Valor</th>
     </thead>
-    <tbody>
+    <tbody id='tbody'>
         <tr><td>Remove...</td></tr>
     </tbody>
 </table>
